@@ -1,8 +1,8 @@
 /****************************************************************************
  * graphics/nxmu/nx_openwindow.c
  *
- *   Copyright (C) 2008-2009, 2011 Gregory Nutt. All rights reserved.
- *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
+ *   Copyright (C) 2008-2009, 2011-2012 Gregory Nutt. All rights reserved.
+ *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -39,11 +39,12 @@
 
 #include <nuttx/config.h>
 
-#include <stdlib.h>
 #include <errno.h>
 #include <debug.h>
 
 #include <nuttx/nx/nx.h>
+#include <nuttx/kmalloc.h>
+
 #include "nxfe.h"
 
 /****************************************************************************
@@ -103,7 +104,7 @@ NXWINDOW nx_openwindow(NXHANDLE handle, FAR const struct nx_callback_s *cb,
 
   /* Pre-allocate the window structure */
 
-  wnd = (FAR struct nxbe_window_s *)zalloc(sizeof(struct nxbe_window_s));
+  wnd = (FAR struct nxbe_window_s *)kzalloc(sizeof(struct nxbe_window_s));
   if (!wnd)
     {
       errno = ENOMEM;
